k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-native-kubernetes
  labels:
    app.kubernetes.io/part-of: cloud-native-kubernetes
